# tlb-auto-scheduler

./: .gitignore  Cargo.toml  costs.example.toml  readme.md
scripts/: give_admin_js.py  info.py  run_remote.py
src/: availabilities.rs  checks.rs  classes.rs  costs.rs  errors.rs  evaluator.rs  initial_solution.rs  instructor.rs  main.rs  mutation.rs  overrides.rs  session.rs  solution_output.rs  solver.rs  talloc.rs  tsv.rs  utils.rs
