[package]
name = "tlb_auto_scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.3"
clap = { version = "4.5.7", features = ["derive"] }
itertools = "0.13.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
