[package]
name = "tlb_auto_scheduler"
version = "0.1.0"
edition = "2021"
authors = ["Xavier Cooney"]

[profile.release]
codegen-units = 1
lto = "fat"
debug = 1

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
bit-set = "0.5.3"
clap = { version = "4.5.7", features = ["derive"] }
enum-map = { version = "2.7.3", features = ["serde"] }
fastrand = "2.1.0"
hostname = "0.4.0"
itertools = "0.13.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
scoped_threadpool = "0.1.9"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
strum = { version = "0.26.2", features = ["derive"] }
toml = "0.8.14"
